# project-django

./: .flake8  .gitignore  .pyup.yml  Procfile  README.md  codecov.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: django.yml
contrib/: env-sample
pythondjango/: asgi.py  conftest.py  django_assertions.py  settings.py  urls.py  wsgi.py
pythondjango/aperitivos/: admin.py  models.py  test_video.py  tests.py  urls.py  views.py
pythondjango/aperitivos/migrations/: 0001_initial.py  0002_alter_video_slug.py
pythondjango/aperitivos/tests/: test_indice.py  test_video.py
pythondjango/base/: admin.py  models.py  urls.py  views.py
pythondjango/base/migrations/: 0001_initial.py
pythondjango/base/tests/: tempCodeRunnerFile.py  test_home.py  test_login.py
pythondjango/modulos/: admin.py  apps.py  context_processors.py  facade.py  models.py  urls.py  views.py
pythondjango/modulos/migrations/: 0001_initial.py  0002_modulo_slug.py  0003_populando_slug.py  0004_alter_modulo_slug.py  0005_aula.py  0006_aula_vimeo_id.py  0007_aula_vimeo_id_obrigatorio.py
pythondjango/modulos/tests/: test_aba_de_modulos.py  test_aula_detalhe.py  test_facade.py  test_modulo_detalhe.py  test_modulo_indice.py
pythondjango/turmas/: admin.py  apps.py  models.py  urls.py  views.py
pythondjango/turmas/migrations/: 0001_initial.py  0002_matricula_turmas_alunos_matricula_turma_and_more.py  0002_turmas_matricula.py  0003_alter_matricula_options_alter_matricula_data_and_more.py
pythondjango/turmas/tests/: test_indice.py  test_indice_turma.py
(+12 files in other folders)
