[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Vinicius Braga <Vbragadev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
Django = "^4.0.1"
gunicorn = "^20.1.0"
flake8 = "^4.0.1"
codecov = "2.1.12"
pytest-django = "^4.5.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
python-decouple = "^3.5"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
django-s3-folder-storage = "^0.5"
Collectfast = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
